[tool.poetry]
name = "pubmed_fetcher"
version = "0.1.0"
description = "A tool to fetch research papers from PubMed and export details to CSV."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.80"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[tool.poetry.scripts]
pubmed-fetcher = "pubmed_fetcher.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
